--- a/style.css
+++ b/style.css
@@ -1,12 +1,19 @@
-
-body{
+body {
 	margin: 0 auto;
 	padding: 0;
-	width: 70%;
+	width: 75%;
 }
-h1{
+
+.header {
+	padding-top: 1px;
+	padding-bottom: 1px; 
+	background-color : black;
 	text-align: center;
-	font-family: courier,arial,helvetica;
+}
+
+h1 {
+	text-align: center;
+	font-family: courier, arial, helvetica;
 	font-style: italic;
 	background: white;
 	margin: 0;
@@ -14,22 +21,31 @@ h1{
 	color: #3c104c;
 	font-size: 3em;
 	border-color: #d35400;
-
 }
 
-.navigation ul{
-		list-style-type: none;
-		margin:0;
-    	overflow:auto;
-    	padding: 0.5%;
-    	border-color: #F3962B;
-    	border-style: solid;
-    	border-width: 5px;
-    	border-collapse: collapse;
-    	border-spacing: 0;
+.h2 {
+	font-family: courier, arial, helvetica;
+	font-size: 30px;
+	background-color: white;
+	color: black;
+	padding: 10px;
+	text-align: center;
+	font-weight:bold;
 }
 
-.navigation ul> li{
+.navigation ul {
+	list-style-type: none;
+	margin: 0;
+	overflow: auto;
+	padding: 0.5%;
+	border-color: #F3962B;
+	border-style: solid;
+	border-width: 5px;
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+.navigation ul>li {
 	width: 25%;
 	float: left;
 	text-align: center;
@@ -37,7 +53,7 @@ h1{
 	font-size: 1.2em;
 }
 
-ul> li> a{
+ul>li>a {
 	background-color: #FCDFBF;
 	padding: 0;
 	margin: 0;
@@ -45,59 +61,90 @@ ul> li> a{
 	border-color: #FABD78;
 	display: block;
 	color: white;
-	height: 45px;
+	height: 50px;
 	color: black;
 	font-weight: bold;
-	text-decoration:none;
+	text-decoration: none;
 }
-img{
+
+img {
 	float: right;
 	margin: 2%;
 }
 
-h2{
+h2 {
 	margin-top: 2%;
 	font-weight: bold;
 	font-size: 200%;
 }
-p{
+
+p {
 	font-size: 20px;
 }
-h3{
+
+h3 {
 	font-size: 150%;
 }
 
-ul> li, ol{
+ul>li, ol {
 	font-size: 1.3em;
 	line-height: 1.2em;
 }
 
-p + ol{
+p+ol {
 	margin-right: 40%;
 }
-a:hover{
+
+a:hover {
 	background-color: #fff;
 	color: #000;
 }
 
-.current{
+.current {
 	background-color: #fff;
-	color: #000;	
+	color: #000;
 }
 
-#content{
+#content {
 	background-color: white;
-	margin:0;
-	padding:1% 3%;
-
+	margin: 0;
+	padding: 1% 3%;
 }
-table, caption, td, th{
+
+table, caption, td, th {
 	border: 2px solid black;
 }
 
-th{
+th {
 	width: 10%;
 }
-dt, dd{
+
+dt, dd {
 	font-size: 1.2em;
+}
+
+
+
+.login {
+	font-family: arial;
+	font-size: 14px;
+	text-align: right;
+	margin: auto;
+	max-width: 300px;
+	padding-top: 35px;
+}
+
+.button {
+	background-color: black;
+	font-family: arial;
+	color: white;
+	padding: 6px;
+	margin-top: 5px;
+	border-radius: 10px;
+}
+
+
+.centerAlign{
+	text-align: center;
+	font-class: courier;
 }
