--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,11 @@ h1{
     	border-spacing: 0;
 }
 
+#divToChange{
+	margin-top: 10px;
+	padding-top: 10px;
+}
+
 .navigation ul> li{
 	width: 25%;
 	float: left;
@@ -65,6 +70,8 @@ p{
 }
 h3{
 	font-size: 150%;
+	margin: 0;
+	padding: 0;
 }
 
 ul> li, ol{
@@ -109,8 +116,7 @@ a:hover{
 	box-shadow: 0 0 15px gray;
 	float: left;
 	margin: 5%;
-	padding: 10px;
-	width: 100%;
+	width: 90%;
 	height: auto;
 }
 
@@ -124,7 +130,8 @@ img {
 	margin: 10px; 
 }
 .back{
-	margin-left: 50%;
+	margin: auto;
+	display: block;	
 	background-color: white;
   	color: black;
  	border: 2px solid #4CAF50;
