--- a/style.css
+++ b/style.css
@@ -1,19 +1,12 @@
-body {
+
+body{
 	margin: 0 auto;
 	padding: 0;
-	width: 75%;
+	width: 70%;
 }
-
-.header {
-	padding-top: 1px;
-	padding-bottom: 1px; 
-	background-color : black;
+h1{
 	text-align: center;
-}
-
-h1 {
-	text-align: center;
-	font-family: courier, arial, helvetica;
+	font-family: courier,arial,helvetica;
 	font-style: italic;
 	background: white;
 	margin: 0;
@@ -21,31 +14,27 @@ h1 {
 	color: #3c104c;
 	font-size: 3em;
 	border-color: #d35400;
+
 }
 
-.h2 {
-	font-family: courier, arial, helvetica;
-	font-size: 30px;
-	background-color: white;
-	color: black;
-	padding: 10px;
-	text-align: center;
-	font-weight:bold;
+.navigation ul{
+		list-style-type: none;
+		margin:0;
+    	overflow:auto;
+    	padding: 0.5%;
+    	border-color: #F3962B;
+    	border-style: solid;
+    	border-width: 5px;
+    	border-collapse: collapse;
+    	border-spacing: 0;
 }
 
-.navigation ul {
-	list-style-type: none;
-	margin: 0;
-	overflow: auto;
-	padding: 0.5%;
-	border-color: #F3962B;
-	border-style: solid;
-	border-width: 5px;
-	border-collapse: collapse;
-	border-spacing: 0;
+#divToChange{
+	margin-top: 10px;
+	padding-top: 10px;
 }
 
-.navigation ul>li {
+.navigation ul> li{
 	width: 25%;
 	float: left;
 	text-align: center;
@@ -53,7 +42,7 @@ h1 {
 	font-size: 1.2em;
 }
 
-ul>li>a {
+ul> li> a{
 	background-color: #FCDFBF;
 	padding: 0;
 	margin: 0;
@@ -61,90 +50,91 @@ ul>li>a {
 	border-color: #FABD78;
 	display: block;
 	color: white;
-	height: 50px;
+	height: 45px;
 	color: black;
 	font-weight: bold;
-	text-decoration: none;
+	text-decoration:none;
 }
-
-img {
+img{
 	float: right;
 	margin: 2%;
 }
 
-h2 {
+h2{
 	margin-top: 2%;
 	font-weight: bold;
 	font-size: 200%;
 }
-
-p {
+p{
 	font-size: 20px;
 }
-
-h3 {
+h3{
 	font-size: 150%;
+	margin: 0;
+	padding: 0;
 }
 
-ul>li, ol {
+ul> li, ol{
 	font-size: 1.3em;
 	line-height: 1.2em;
 }
 
-p+ol {
+p + ol{
 	margin-right: 40%;
 }
-
-a:hover {
+a:hover{
 	background-color: #fff;
 	color: #000;
 }
 
-.current {
+.current{
 	background-color: #fff;
-	color: #000;
+	color: #000;	
 }
 
-#content {
+#content{
 	background-color: white;
-	margin: 0;
-	padding: 1% 3%;
+	margin:0;
+	padding:1% 3%;
+
 }
 
-table, caption, td, th {
-	border: 2px solid black;
+.oneRecipe {
+	background-color: #f4f1eb;
+	border-radius: 5px;
+	box-shadow: 0 0 15px gray;
+	float: left;
+	margin: 4.5%;
+	padding: 10px;
+	width: 215px;
+	height: 210px; 
 }
 
-th {
-	width: 10%;
+.onereview {
+	background-color: #f4f1eb;
+	border-radius: 5px;
+	box-shadow: 0 0 15px gray;
+	float: left;
+	margin: 5%;
+	width: 90%;
+	height: auto;
 }
 
-dt, dd {
-	font-size: 1.2em;
+img {
+	height: 200px;
+	width: 200px;
+	float: right;
 }
 
-
-
-.login {
-	font-family: arial;
-	font-size: 14px;
-	text-align: right;
+.thedetails {
+	margin: 10px; 
+}
+.back{
 	margin: auto;
-	max-width: 300px;
-	padding-top: 35px;
+	display: block;	
+	background-color: white;
+  	color: black;
+ 	border: 2px solid #4CAF50;
+ 	padding:1%;
 }
 
-.button {
-	background-color: black;
-	font-family: arial;
-	color: white;
-	padding: 6px;
-	margin-top: 5px;
-	border-radius: 10px;
-}
-
-
-.centerAlign{
-	text-align: center;
-	font-class: courier;
-}
